<resources>
    <string name="app_name">RoyalMobile(C)</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!
        <br>Login if you already have an account.</br>
        <br>Register to get started with the app.</br>
    </string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">LOGIN TO APP</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login </b></font>if you already have an account</string>
    <string name="login_email">Your Email</string>
    <string name="login_password">YOUR PASSWORD</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t have an account<font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C9B8">Register </font>if you don\'t have an account</string>
    <string name="register_fullname">Your Name</string>
    <string name="register_email">Email</string>
    <string name="register_username">Phone Number</string>
    <string name="register_have_account">I already have an account <font color="#00C988">Login</font></string>
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">close Drawer</string>
    <string name="err_name">Please Enter Your Name</string>
    <string name="err_email">Please Enter Valid Email Address</string>
    <string name="err_password">Please Enter Password</string>
    <string name="err_password_confirmation">"Please confirm your password "</string>
    <string name="Profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="Notification">Notification</string>
    <string name="my_rewards">rewards</string>
    <string name="dashboardfragment">DashboardFragment</string>
    <string name="favouritrsfragment">FavouritrsFragment</string>
    <string name="cartfragment">CartFragment</string>
    <string name="rewards">Rewards</string>
    <string name="best_selling">Best Selling Product</string>
    <string name="view_all">View All</string>
    <string name="redeem">Redeem</string>
    <string name="check_price_after_coupon_redemption">Check price after coupon redemption</string>
    <string name="your_recent_orders">Your recent orders</string>
    <string name="we_have_sent_an_otp_for_changing_password_request_n_kindly_check_your_emails"><b>We have sent an OTP for changing password request\n kindly check your emails</b></string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="My_address">Parsuram Nagar,Nr.Rameshwar Mahadev,Meghani Nagar</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="change_or_add_a_new_address">Change or add a new address</string>
    <string name="rs_49999">Rs.49999/-</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_now">Order Now</string>
    <string name="raidas_kunal">Raidas Kunal</string>
    <string name="_380016">380016</string>
    <string name="promo">Promo</string>

</resources>