<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/notification"
        android:title="@string/Notification"
        android:icon="@drawable/baseline_notifications_24"/>
    <item
        android:id="@+id/rewards"
        android:title="@string/my_rewards"
        android:icon="@drawable/ic_favouritrs"/>
    <item
        android:id="@+id/order"
        android:title="@string/order"
        android:icon="@drawable/ic_order"/>
    <item
        android:id="@+id/Cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favouritrs"/>
    <item
        android:id="@+id/profile"
        android:title="@string/Profile"
        android:icon="@drawable/ic_profile"/>
    <group>
        <item
            android:id="@+id/log_out"
            android:title="@string/btn_logout"
            android:icon="@drawable/logout"/>
    </group>


</menu>